Fixes icon sizing issues & spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@ a {
 
 .container {
 	width: 100%;
-	max-width: 720px;
+	max-width: 800px;
 	margin: 0 auto;
 	padding: 0 3%;
 }
@@ -63,7 +63,7 @@ hr {
 }
 
 .radio-label {
-	padding: 1.5rem;
+	padding: 1.2rem;
 	border: 1px solid #c3cee0;
 	border-radius: 8px;
 	cursor: pointer;
@@ -110,8 +110,8 @@ hr {
 
 .selectbox {
 	position: absolute;
-	right: 12px;
-	top: 12px;
+	right: 6px;
+	top: 6px;
 	width: 24px;
 	aspect-ratio: 1/1;
 	display: grid;
@@ -144,8 +144,8 @@ hr {
 }
 
 .radio-title-group > span {
-	font-weight: 600;
-	font-size: 1.2rem;
+	font-weight: 700;
+	font-size: 1.1rem;
 	line-height: 1;
 }
 
